force-app/main/default/objects/Account/fields/CPF_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CPF_CNPJ__c</fullName>
    <label>CPF/CNPJ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>