force-app/main/default/objects/Account/fields/Fechar_Oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Fechar_Oportunidades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fechar Oportunidades</label>
    <type>Checkbox</type>
</CustomField>