force-app/main/default/objects/Account/fields/Limite_de_Credito_Disponivel__c.field-meta.xml
<CustomField>
    <fullName>Limite_de_Credito_Disponivel__c</fullName>
    <formula>Limite_de_Credito__c -  Limite_Utilizado_Totalizacao__c</formula>
    <label>Limite de Crédito Disponível</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>