force-app/main/default/objects/Account/fields/Limite_Utilizado__c.field-meta.xml
<CustomField>
    <fullName>Limite_Utilizado__c</fullName>
    <label>Limite Utilizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>