force-app/main/default/objects/Account/fields/Limite_Utilizado_Totalizacao__c.field-meta.xml
<CustomField>
    <fullName>Limite_Utilizado_Totalizacao__c</fullName>
    <formula>Total_Custo_Viagens__c +  Total_Despesas__c</formula>
    <label>Limite Utilizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>