force-app/main/default/objects/Account/fields/Novo_Limite_de_Credito_Solicitado__c.field-meta.xml
<CustomField>
    <fullName>Novo_Limite_de_Credito_Solicitado__c</fullName>
    <inlineHelpText>Campo com o novo limite de crédito solicitado.</inlineHelpText>
    <label>Novo Limite de Crédito Solicitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>