force-app/main/default/objects/Account/fields/Oportunidade_Maxima__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_Maxima__c</fullName>
    <label>Oportunidade Máxima</label>
    <length>255</length>
    <type>Text</type>
</CustomField>