force-app/main/default/objects/Account/fields/Porte_da_empresa__c.field-meta.xml
<CustomField>
    <fullName>Porte_da_empresa__c</fullName>
    <inlineHelpText>Pequeno (até 50 funcionários)
Médio (50 – 200 funcionários)
Grande (&gt; 200 funcionários)</inlineHelpText>
    <label>Porte da empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pequeno</fullName>
            </value>
            <value>
                <fullName>Médio</fullName>
            </value>
            <value>
                <fullName>Grande</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>