force-app/main/default/objects/Account/fields/Tem_fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Tem_fornecedor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tem fornecedor?</label>
    <type>Checkbox</type>
</CustomField>