force-app/main/default/objects/Account/fields/Tipo_de_Companhia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Companhia__c</fullName>
    <label>Tipo de Companhia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aérea</fullName>
            </value>
            <value>
                <fullName>Rodoviária</fullName>
            </value>
            <value>
                <fullName>Aplicativo de transporte</fullName>
            </value>
            <value>
                <fullName>Ferroviário</fullName>
            </value>
            <value>
                <fullName>Pluvial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>