force-app/main/default/objects/Account/fields/Total_Custo_Viagens__c.field-meta.xml
<CustomField>
    <fullName>Total_Custo_Viagens__c</fullName>
    <description>Total de viagens da empresa.</description>
    <inlineHelpText>Total de viagens da empresa que já foram pagas.</inlineHelpText>
    <label>Total Custo Viagens</label>
    <summarizedField>Viagem__c.Custo__c</summarizedField>
    <summaryFilterItems>
        <field>Viagem__c.Pago_pela_empresa__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Viagem__c.Cliente__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>