force-app/main/default/objects/Account/recordTypes/Companhia.recordType-meta.xml
<RecordType>
    <fullName>Companhia</fullName>
    <active>true</active>
    <label>Companhia</label>
</RecordType>