force-app/main/default/objects/Account/validationRules/Valida_Mascara_CPF_e_CNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Mascara_CPF_e_CNPJ</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( ISBLANK(CPF_CNPJ__c) ),
!REGEX(CPF_CNPJ__c,&quot;[0-9]{2}.[0-9]{3}.[0-9]{3}/[0-9]{4}-[0-9]{2}&quot;),
!REGEX(CPF_CNPJ__c,&quot;[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}&quot;)
)</errorConditionFormula>
    <errorDisplayField>CPF_CNPJ__c</errorDisplayField>
    <errorMessage>Formato inválido para CPF ou CNPJ</errorMessage>
</ValidationRule>